# Mandelbrot

./: CMakeLists.txt
main/: Application.cpp
shaders/: Mandelbrot.shader
